--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cw course work 00012251</title>
-    <link rel="stylesheet"href="https://unpkg.com/swiper@7/swiper-bundle.min.css"/>
+    <link rel="stylesheet" href="https://unpkg.com/swiper@7/swiper-bundle.min.css"/>
 
     <!-- fons awesome code link-->
     <link rel="stylesheet"  href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" >
@@ -49,8 +49,8 @@
 
 <!-- search form -->
 
-<form action="" id = "search-form">
-    <input type="search"placeholder="search here..." name="" id="search-box">
+<form action="" id ="search-form">
+    <input type="search" placeholder="search here..." id="search-box">
     <label for="search-box" class="fas fa-search"></label>
     <i class="fas fa-times" id="close"></i>
 </form>
@@ -67,7 +67,7 @@
                     <a href="#" class="btn">order now</a>
                  </div>
                     <div class="image">
-                        <img src="roses/bunch of roses.png" width= "500"  height="500"alt="">
+                        <img src="roses/bunch of roses.png" width= "500"  height="500">
 
                     </div>
              </div>   
@@ -79,7 +79,7 @@
                    <a href="#" class="btn">order now</a>
                 </div>
                    <div class="image">
-                       <img src="roses/red rose.jpg" width= "500"  height="500" alt="">
+                       <img src="roses/red rose.jpg" width= "500"  height="500" >
 
                    </div>
             </div>
@@ -91,7 +91,7 @@
                    <a href="#" class="btn">order now</a>
                 </div>
                    <div class="image">
-                       <img src="roses/white rose.png" width= "500"  height="500" alt="">
+                       <img src="roses/white rose.png" width= "500"  height="500" >
 
                    </div>
             </div>
@@ -106,12 +106,12 @@
 <!--Bouquet section starts-->
 <section class="flowers" id="flowers">
     <h3 class="sub-heading"> our flowers </h3>
-    <h1 class="heading"> Popular bouquets </h3>
+    <h1 class="heading"> Popular bouquets </h1>
         <div class="box-container">
             <div class="box">
                 <a href="#" class="fas fa-seedling"></a>
                 <a href="#" class="fas fa-eye"></a>
-                <img src="bouquet/bouquet1.jpg"  width= "500"  height="500" alt="">
+                <img src="bouquet/bouquet1.jpg"  width= "500"  height="500">
                 <h3>Collection of flowers 1</h3>
                 <div class="floras">
                     <i class="fas fa-star"></i>
@@ -126,7 +126,7 @@
             <div class="box">
                 <a href="#" class="fas fa-seedling"></a>
                 <a href="#" class="fas fa-eye"></a>
-                <img src="bouquet/bouquet2.jpg"  width= "500"  height="500" alt="">
+                <img src="bouquet/bouquet2.jpg"  width= "500"  height="500">
                 <h3>Collection of flowers 2</h3>
                 <div class="floras">
                     <i class="fas fa-star"></i>
@@ -141,7 +141,7 @@
             <div class="box">
                 <a href="#" class="fas fa-seedling"></a>
                 <a href="#" class="fas fa-eye"></a>
-                <img src="bouquet/bouquet3.jpg"  width= "500"  height="500" alt="">
+                <img src="bouquet/bouquet3.jpg"  width= "500"  height="500">
                 <h3>Collection of flowers 3</h3>
                 <div class="floras">
                     <i class="fas fa-star"></i>
@@ -156,7 +156,7 @@
             <div class="box">
                 <a href="#" class="fas fa-seedling"></a>
                 <a href="#" class="fas fa-eye"></a>
-                <img src="bouquet/bouquet4.jpg"  width= "500"  height="500" alt="">
+                <img src="bouquet/bouquet4.jpg"  width= "500"  height="500">
                 <h3>Collection of flowers 4</h3>
                 <div class="floras">
                     <i class="fas fa-star"></i>
@@ -171,7 +171,7 @@
             <div class="box">
                 <a href="#" class="fas fa-seedling"></a>
                 <a href="#" class="fas fa-eye"></a>
-                <img src="bouquet/bouquet5.jpg"  width= "500"  height="500" alt="">
+                <img src="bouquet/bouquet5.jpg"  width= "500"  height="500">
                 <h3>Collection of flowers 5</h3>
                 <div class="floras">
                     <i class="fas fa-star"></i>
@@ -186,7 +186,7 @@
             <div class="box">
                 <a href="#" class="fas fa-seedling"></a>
                 <a href="#" class="fas fa-eye"></a>
-                <img src="bouquet/bouquet6.jpg"  width= "500"  height="500" alt="">
+                <img src="bouquet/bouquet6.jpg"  width= "500"  height="500">
                 <h3>Collection of flowers 6</h3>
                 <div class="floras">
                     <i class="fas fa-star"></i>
@@ -215,7 +215,7 @@
     <div class="row">
 
         <div class="image">
-            <img src="Images/Logo.jpg" alt="">
+            <img src="Images/Logo.jpg">
         </div>
 
         <div class="content">
@@ -257,7 +257,7 @@
 
         <div class="box">
             <div class="image">
-                <img src="birthday flowers/january-flower.jpg" width="700" height="500" alt="">
+                <img src="birthday flowers/january-flower.jpg" width="700" height="500">
                 <a href="#" class="fas fa-seedling"></a>
             </div>
             <div class="content">
@@ -277,7 +277,7 @@
 
         <div class="box">
             <div class="image">
-                <img src="birthday flowers/february-flower.jpg" width="700" height="500" alt="">
+                <img src="birthday flowers/february-flower.jpg" width="700" height="500">
                 <a href="#" class="fas fa-seedling"></a>
             </div>
             <div class="content">
@@ -297,7 +297,7 @@
 
         <div class="box">
             <div class="image">
-                <img src="birthday flowers/march-flower.jpg" width="700" height="500" alt="">
+                <img src="birthday flowers/march-flower.jpg" width="700" height="500">
                 <a href="#" class="fas fa-seedling"></a>
             </div>
             <div class="content">
@@ -317,7 +317,7 @@
 
         <div class="box">
             <div class="image">
-                <img src="birthday flowers/april-flower.jpg" width="700" height="500" alt="">
+                <img src="birthday flowers/april-flower.jpg" width="700" height="500">
                 <a href="#" class="fas fa-seedling"></a>
             </div>
             <div class="content">
@@ -337,7 +337,7 @@
 
         <div class="box">
             <div class="image">
-                <img src="birthday flowers/may-flower.jpg" width="700" height="500" alt="">
+                <img src="birthday flowers/may-flower.jpg" width="700" height="500">
                 <a href="#" class="fas fa-seedling"></a>
             </div>
             <div class="content">
@@ -357,7 +357,7 @@
 
         <div class="box">
             <div class="image">
-                <img src="birthday flowers/june-flower.jpg" width="700" height="500" alt="">
+                <img src="birthday flowers/june-flower.jpg" width="700" height="500">
                 <a href="#" class="fas fa-seedling"></a>
             </div>
             <div class="content">
@@ -377,7 +377,7 @@
 
         <div class="box">
             <div class="image">
-                <img src="birthday flowers/july-flower.jpg" width="700" height="500" alt="">
+                <img src="birthday flowers/july-flower.jpg" width="700" height="500">
                 <a href="#" class="fas fa-seedling"></a>
             </div>
             <div class="content">
@@ -397,7 +397,7 @@
         
         <div class="box">
             <div class="image">
-                <img src="birthday flowers/august-flower.jpg" width="700" height="500" alt="">
+                <img src="birthday flowers/august-flower.jpg" width="700" height="500">
                 <a href="#" class="fas fa-seedling"></a>
             </div>
             <div class="content">
@@ -417,7 +417,7 @@
 
         <div class="box">
             <div class="image">
-                <img src="birthday flowers/september-flower.jpg" width="700" height="500" alt="">
+                <img src="birthday flowers/september-flower.jpg" width="700" height="500">
                 <a href="#" class="fas fa-seedling"></a>
             </div>
             <div class="content">
@@ -437,7 +437,7 @@
 
         <div class="box">
             <div class="image">
-                <img src="birthday flowers/october-flower.jpg" width="700" height="500" alt="">
+                <img src="birthday flowers/october-flower.jpg" width="700" height="500">
                 <a href="#" class="fas fa-seedling"></a>
             </div>
             <div class="content">
@@ -457,7 +457,7 @@
 
         <div class="box">
             <div class="image">
-                <img src="birthday flowers/november-flower.jpg"width="700" height="500" alt="">
+                <img src="birthday flowers/november-flower.jpg" width="700" height="500">
                 <a href="#" class="fas fa-seedling"></a>
             </div>
             <div class="content">
@@ -477,7 +477,7 @@
 
         <div class="box">
             <div class="image">
-                <img src="birthday flowers/december-flower.jpg" width="700" height="500" alt="">
+                <img src="birthday flowers/december-flower.jpg" width="700" height="500">
                 <a href="#" class="fas fa-seedling"></a>
             </div>
             <div class="content">
@@ -513,7 +513,7 @@
             <div class="swiper-slide slide">
                 <i class="fas fa-quote-right"></i>
                 <div class="user">
-                    <img src="Images/why1.jpg" alt="">
+                    <img src="Images/why1.jpg">
                     <div class="user-info">
                         <h3>Main reason</h3>
                         <div class="stars">
@@ -531,7 +531,7 @@
             <div class="swiper-slide slide">
                 <i class="fas fa-quote-right"></i>
                 <div class="user">
-                    <img src="Images/why2.jpg" alt="">
+                    <img src="Images/why2.jpg">
                     <div class="user-info">
                         <h3>Stress Buster </h3>
                         <div class="stars">
@@ -550,7 +550,7 @@
             <div class="swiper-slide slide">
                 <i class="fas fa-quote-right"></i>
                 <div class="user">
-                    <img src="Images/why3.jpg" alt="">
+                    <img src="Images/why3.jpg" >
                     <div class="user-info">
                         <h3>Perfect Gifting Option </h3>
                         <div class="stars">
@@ -569,7 +569,7 @@
             <div class="swiper-slide slide">
                 <i class="fas fa-quote-right"></i>
                 <div class="user">
-                    <img src="Images/why4.jfif" alt="">
+                    <img src="Images/why4.jfif">
                     <div class="user-info">
                         <h3>Healing Power </h3>
                         <div class="stars">
@@ -587,7 +587,7 @@
             <div class="swiper-slide slide">
                 <i class="fas fa-quote-right"></i>
                 <div class="user">
-                    <img src="Images/why5.jfif" alt="">
+                    <img src="Images/why5.jfif">
                     <div class="user-info">
                         <h3>Unique Fragrance They Hold </h3>
                         <div class="stars">
@@ -605,7 +605,7 @@
             <div class="swiper-slide slide">
                 <i class="fas fa-quote-right"></i>
                 <div class="user">
-                    <img src="Images/why6.jfif" alt="">
+                    <img src="Images/why6.jfif">
                     <div class="user-info">
                         <h3>Give Words To Emotions</h3>
                         <div class="stars">
@@ -624,7 +624,7 @@
             <div class="swiper-slide slide">
                 <i class="fas fa-quote-right"></i>
                 <div class="user">
-                    <img src="Images/why7.jpg" alt="">
+                    <img src="Images/why7.jpg">
                     <div class="user-info">
                         <h3>Different Shades</h3>
                         <div class="stars">
@@ -692,11 +692,11 @@
         <div class="inputBox">
             <div class="input">
                 <span>your address</span>
-                <textarea name="" placeholder="enter your address" id="" cols="30" rows="10"></textarea>
+                <textarea  placeholder="enter your address" id="" cols="30" rows="10"></textarea>
             </div>
             <div class="input">
                 <span>your message</span>
-                <textarea name="" placeholder="enter your message" id="" cols="30" rows="10"></textarea>
+                <textarea  placeholder="enter your message" id="" cols="30" rows="10"></textarea>
             </div>
         </div>
 
@@ -751,7 +751,7 @@
 
 <!-- loader part  -->
 <div class="loader-container">
-    <img src="Images/Drawing flower.gif" alt="">
+    <img src="Images/Drawing flower.gif" >
 </div>
 
 
