--- a/index.html
+++ b/index.html
@@ -64,6 +64,8 @@
                     <span> Our special flowers "Roses"</span>
                     <h3>Bunch of Roses</h3>
                     <p>Roses make the perfect gift for birthdays, anniversaries and every holiday in between</p>
+                    <p>“This website was created to fulfill Web Technology module’s
+                        requirements and does not represent an actual company or service”.</p>
                     <a href="#" class="btn">order now</a>
                  </div>
                     <div class="image">
