--- a/index.html
+++ b/index.html
@@ -78,6 +78,8 @@
                    <span> Our special flowers "Roses"</span>
                    <h3>Red rose</h3>
                    <p>Red rosebuds can symbolize purity and loveliness along with romantic love</p>
+                   <p>“This website was created to fulfill Web Technology module’s
+                    requirements and does not represent an actual company or service”.</p>
                    <a href="#" class="btn">order now</a>
                 </div>
                    <div class="image">
@@ -90,6 +92,8 @@
                    <span> Our special flowers "Roses"</span>
                    <h3>White rose</h3>
                    <p>The white rose, or bridal rose, has long evoked the feelings of innocence and purity</p>
+                   <p>“This website was created to fulfill Web Technology module’s
+                    requirements and does not represent an actual company or service”.</p>
                    <a href="#" class="btn">order now</a>
                 </div>
                    <div class="image">
